# djedjbot-rs

./: Cargo.toml  LICENSE  README.md
migrations/2018-05-04-142609_create_songs/: up.sql
src/: lib.rs  models.rs  schema.rs
