[package]
name = "djedjbot"
version = "0.1.0"
authors = ["Jacek Chmiel <jacek@chmiel.cc>"]

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"

rocket = "0.3.9"
rocket_codegen = "0.3.9"

serde = "1.0"
serde_derive = "1.0"

maplit = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]